syntax = "proto3";
package v1;
option go_package = "pkg/api/v1";
import "google/protobuf/timestamp.proto";

message Mix {
  string id = 1;
  string category = 2;
  repeated string post_ids = 3;
  Background background = 4;
  google.protobuf.Timestamp requested_at = 5;
  string title = 6;
}

message Background {
  string fallback = 1;
  string background_image = 2;
}

message GetMixesRes { repeated Mix mixes = 1; }